--- a/src/ui/package.json
+++ b/src/ui/package.json
@@ -14,6 +14,7 @@
 	"license": "AGPL-3.0",
 	"private": true,
 	"dependencies": {
+		"ansi-regex": ">=5.0.1",
 		"antd": "^4.16.13",
 		"axios": "^0.21.4",
 		"i18next": "^21.0.1",
